@@ -64,9 +64,9 @@ setup(name='zope.app.publication',
               'zope.security',
               'zope.securitypolicy',
               'zope.site',
-              'zope.testing']),
+              'zope.testing',
+              'ZODB3']),
     install_requires=['zope.interface',
-                      'ZODB3',
                       'zope.authentication',
                       'zope.component',
                       'zope.error',
@@ -74,6 +74,7 @@ setup(name='zope.app.publication',
                       'zope.location',
                       'zope.publisher>=3.12.4',
                       'zope.traversing>=3.9.0',
+                      'transaction >=1.1.0',
                       'setuptools',
                       ],
     include_package_data = True,
